--- a/shared/scss/components/common/nav.scss
+++ b/shared/scss/components/common/nav.scss
@@ -1,5 +1,6 @@
 .navbar {
   background: $navbar-bg;
+  border-radius: 0;
 }
 
 .navbar-nav li {
